--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <div class="backdrop is-hiddden">
+        <div class="modal">
+            <button class="modal-button">
+                <svg class="modal-icon" width="30px" height="30px" viewBox="0 0 30 30">
+                    <use xmlns href="./images/icons.svg#icon-closed"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
     <header class="page-header">
         <div class="container">
             <div class="header-inner">
