--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
                         <img src="./images/project2.jpg" alt="Дизайн проэкт Постер New Orlean vs Golden Star" width="370">
                         <p class="work-thumb-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                         позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
-                    </div>>
+                    </div>
                     
                     <div class="item-inner">
                         <h3 class="title">Постер New Orlean vs Golden Star</h3>
