--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         </div>
        
     </footer>
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button data-modal-close class="modal-button">
                 <svg class="modal-icon" width="30px" height="30px" viewBox="0 0 30 30">
